Fix layout: use CSS Grid for sidebar/content layout
- Replace float-based layout with CSS Grid on #main
- Fixes sidebar overlapping content issue
- Fixes large gap at top of pages
- Sidebar width now controlled by grid-template-columns

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -4,12 +4,17 @@
 
 #main {
   @include container;
-  @include clearfix;
   margin-top: 2em;
   padding-left: 1em;
   padding-right: 1em;
   animation: intro 0.3s both;
   animation-delay: 0.35s;
+
+  @include breakpoint($large) {
+    display: grid;
+    grid-template-columns: 200px 1fr;
+    gap: 2em;
+  }
 
   @include breakpoint($x-large) {
     max-width: $x-large;
@@ -17,15 +22,9 @@
 }
 
 .page {
-  @include breakpoint($large) {
-    @include span(10 of 12 last);
-    @include prefix(0.5 of 12);
-    @include suffix(2 of 12);
-  }
+  min-width: 0; // Prevent grid blowout
 
   .page__inner-wrap {
-    @include full();
-
     .page__content,
     .page__meta,
     .page__share {
